--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,7 @@ os: Visual Studio 2015
 
 environment:
   HOME: "%HOMEDRIVE%%HOMEPATH%"
-  PYTHON: C:\Python27
+  PYTHON: C:\Python37
   SCONS_CACHE_ROOT: "%HOME%\\scons_cache"
   SCONS_CACHE_LIMIT: 1024
   matrix:
@@ -21,7 +21,7 @@ cache:
 install:
   - SET "PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - pip install -U wheel  # needed for pip install scons to work, otherwise a flag is missing
-  - pip install scons==3.0.1
+  - pip install scons # use stable scons
   - if defined VS call "%VS%" %ARCH%  # if defined - so we can also use mingw
 
 before_build:
