Actually add a true test

--- a/modules/gdscript/tests/scripts/refactor/rename/common/rename_global_class.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/common/rename_global_class.cfg
@@ -3,4 +3,14 @@ refactor={
 	"line": 5,
 	"column": 12,
 }
-[output]
+[expected_result]
+matches={
+	"res://refactor/rename/class_a.global.gd": [
+		{
+			"start_line": 3,
+			"start_column": 12,
+			"end_line": 3,
+			"end_column": 18,
+		}
+	]
+}
