Fix some detection issue and add new internal test

--- a/modules/gdscript/tests/scripts/refactor/rename/common/rename_global_class.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/common/rename_global_class.cfg
@@ -1,9 +1,10 @@
-[test]
+[input]
 refactor={
 	"line": 5,
 	"column": 12,
+	"symbol": "ClassA",
 }
-[expected_result]
+[output]
 matches={
 	"res://refactor/rename/class_a.global.gd": [
 		{
@@ -11,6 +12,14 @@ matches={
 			"start_column": 12,
 			"end_line": 3,
 			"end_column": 18,
+		}
+	],
+	"res://refactor/rename/internal/has_internal_scripts.tscn::GDScript_hen61": [
+		{
+			"start_line": 9,
+			"start_column": 29,
+			"end_line": 9,
+			"end_column": 35,
 		}
 	]
 }
