Remove refactor.to for the moment and fix match values

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/enum_change_inner_inner_enum_value.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/enum_change_inner_inner_enum_value.cfg
@@ -7,22 +7,21 @@ refactor={
 	"line": 20,
 	"column": 49,
 	"symbol": "ENUM_VALUE_1",
-	"to": "Godot"
 }
 [output]
 matches={
 	"res://scripts/class_b.gd": [
 		{
-			"start_line": "8",
-			"start_column": "13",
-			"end_line": "8",
-			"end_column": "25",
+			"start_line": 8,
+			"start_column": 13,
+			"end_line": 8,
+			"end_column": 25,
 		},
 		{
-			"start_line": "20",
-			"start_column": "45",
-			"end_line": "20",
-			"end_column": "57",
+			"start_line": 20,
+			"start_column": 45,
+			"end_line": 20,
+			"end_column": 57,
 		},
 	]
 }
