Add new test and try to simplify symbol match loop

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/enum_change_inner_inner_enum_value.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/enum_change_inner_inner_enum_value.cfg
@@ -23,5 +23,13 @@ matches={
 			"end_line": 20,
 			"end_column": 57,
 		},
+	],
+	"res://scripts/class_a.gd": [
+		{
+			"start_line": 32,
+			"start_column": 79,
+			"end_line": 32,
+			"end_column": 91,
+		},
 	]
 }
