Add member_variable rename tests

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/variable/member_variable/internal_script.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/variable/member_variable/internal_script.cfg
@@ -1,4 +1,4 @@
-; This test renames a variable inside an internal script.
+; This test renames a member variable inside an internal script.
 [input]
 refactor={
 	"file": "res://scenes/scene_one.tscn::GDScript_cx43s",
