Fix issues with enum and signal matching

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/signal/external_script.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/signal/external_script.cfg
@@ -24,4 +24,12 @@ matches={
             "end_column": 16,
         },
     ],
+    "res://scenes/scene_one.tscn::GDScript_cx43s": [
+        {
+            "start_line": 13,
+            "start_column": 22,
+            "end_line": 13,
+            "end_column": 33,
+        },
+	]
 }
