Add test output for `refactor_result_type`

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_float.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_float.cfg
@@ -1,4 +1,4 @@
-; This test renames a float literal.
+; This test renames (at least, tries to rename) a `float` literal.
 [input]
 refactor={
 	"file": "res://scripts/class_b.gd",
@@ -9,3 +9,4 @@ refactor={
 [output]
 outside_refactor = true
 refactor_has_failed = true
+refactor_type = "LITERAL"
