--- a/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_int.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_int.cfg
@@ -1,4 +1,4 @@
-; This test renames an int literal.
+; This test renames (at least, tries to rename) a `int` literal.
 [input]
 refactor={
 	"file": "res://scenes/scene_one.tscn::GDScript_cx43s",
@@ -9,3 +9,4 @@ refactor={
 [output]
 outside_refactor = true
 refactor_has_failed = true
+refactor_type = "LITERAL"
