--- a/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_string.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_string.cfg
@@ -1,4 +1,4 @@
-; This test renames a string literal.
+; This test renames (at least, tries to rename) a `String` literal.
 [input]
 refactor={
 	"file": "res://scripts/class_a.gd",
@@ -9,3 +9,4 @@ refactor={
 [output]
 outside_refactor = true
 refactor_has_failed = true
+refactor_type = "LITERAL"
