--- a/modules/gdscript/tests/scripts/refactor/rename/tests/enum/enum_value/rename_EnumOfInnerInnerA.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/enum/enum_value/rename_EnumOfInnerInnerA.cfg
@@ -7,13 +7,13 @@ refactor={
 	"symbol": "ENUM_VALUE_1",
 }
 [output]
-; matches={
-;     "res://scripts/class_a.gd": [
-;         {
-;             "start_line": 7,
-;             "start_column": 14,
-;             "end_line": 7,
-;             "end_column": 31,
-;         },
-;     ],
-; }
+matches={
+    "res://scripts/class_a.gd": [
+        {
+            "start_line": 8,
+            "start_column": 13,
+            "end_line": 8,
+            "end_column": 25,
+        },
+    ],
+}
