Fix attribute and enum matching

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/enum/enum_name/rename_EnumOfInnerInnerB.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/enum/enum_name/rename_EnumOfInnerInnerB.cfg
@@ -1,35 +1,35 @@
-; This test renames InnerInnerB.EnumOfInnerInnerB.ENUM_VALUE_1.
+; This test renames InnerInnerB.EnumOfInnerInnerB.
 ; This should only rename the enum and its use, but not the
 ; other enum values sharing the same name.
 [input]
 refactor={
 	"file": "res://scripts/class_b.gd",
 	"line": 20,
-	"column": 49,
-	"symbol": "ENUM_VALUE_1",
+	"column": 35,
+	"symbol": "EnumOfInnerInnerB",
 }
 [output]
 matches={
 	"res://scripts/class_b.gd": [
 		{
-			"start_line": 8,
-			"start_column": 13,
-			"end_line": 8,
-			"end_column": 25,
+			"start_line": 7,
+			"start_column": 14,
+			"end_line": 7,
+			"end_column": 31,
 		},
 		{
 			"start_line": 20,
-			"start_column": 45,
+			"start_column": 27,
 			"end_line": 20,
-			"end_column": 57,
+			"end_column": 44,
 		},
 	],
 	"res://scripts/class_a.gd": [
 		{
 			"start_line": 36,
-			"start_column": 79,
+			"start_column": 61,
 			"end_line": 36,
-			"end_column": 91,
+			"end_column": 78,
 		},
 	]
 }
