Update ICU to 78.1

--- a/modules/text_server_adv/gdextension_build/SConstruct
+++ b/modules/text_server_adv/gdextension_build/SConstruct
@@ -515,6 +515,7 @@ thirdparty_icu_sources = [
     "common/errorcode.cpp",
     "common/filteredbrk.cpp",
     "common/filterednormalizer2.cpp",
+    "common/fixedstring.cpp",
     "common/icudataver.cpp",
     "common/icuplug.cpp",
     "common/loadednormalizer2impl.cpp",
