WIP (fix numerous issues)
[no ci]

--- a/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_string.cfg
+++ b/modules/gdscript/tests/scripts/refactor/rename/tests/literal/rename_string.cfg
@@ -4,7 +4,7 @@ refactor={
 	"file": "res://scripts/class_a.gd",
 	"line": 36,
 	"column": 17,
-	"symbol": "EnumOfInnerInnerB value:",
+	"symbol": "\"EnumOfInnerInnerB value:\"",
 }
 [output]
 outside_refactor = true
